2011-11-03  ChangSeok Oh  <shivamidow@gmail.com>

        [GTK] Fix build-break on r99143
        https://bugs.webkit.org/show_bug.cgi?id=71440

        Reviewed by Philippe Normand.

        dragOperation() should be replaced with dragSession().operation since it was removed.
        And didDetectXSSForFrame of WKPageLoaderClient should be relocated.

        * UIProcess/API/gtk/WebKitWebLoaderClient.cpp:
        (webkitWebLoaderClientAttachLoaderClientToPage):
        * UIProcess/API/gtk/WebKitWebViewBase.cpp:
        (webkitWebViewBaseDragDataReceived):
        (webkitWebViewBaseDragMotion):

2011-11-03  Mahesh Kulkarni  <mahesh.kulkarni@nokia.com>

        [Qt] Flagging usage of X11 headers under PLAT_ARCH(X11)
        https://bugs.webkit.org/show_bug.cgi?id=71409

        Reviewed by Simon Hausmann.

        Build fix for building qtwebkit with latest qt5 which has removed Qt X11 headers.

        * WebProcess/Plugins/Netscape/NetscapeBrowserFuncs.cpp:

2011-11-03  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, GTK build fix after r99093...

        * PluginProcess/PluginControllerProxy.h:

2011-11-02  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

        [Qt] [WK] Debug build broken
        https://bugs.webkit.org/show_bug.cgi?id=71417

        Add WKNumber.h for WKBooleanGetTypeID
        Replace WKGetTypeId with WKGetTypeID
        Add initialization for didDetectXSSForFrame member in WKBundlePageLoaderClient
        instance.

        Reviewed by Noam Rosenthal.

        * WebProcess/qt/QtBuiltinBundle.cpp:
        (WebKit::QtBuiltinBundle::handleSetNavigatorQtObjectEnabled):
        * WebProcess/qt/QtBuiltinBundlePage.cpp:
        (WebKit::QtBuiltinBundlePage::QtBuiltinBundlePage):

2011-11-02  Mark Hahnenberg  <mhahnenberg@apple.com>

        De-virtualize JSObject::getOwnPropertyNames
        https://bugs.webkit.org/show_bug.cgi?id=71307

        Reviewed by Darin Adler.
